<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/dialogForeign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_foreign"
            android:background="@drawable/bg_input"
            android:textColor="#212121"
            android:textColorHint="#9E9E9E"
            android:padding="12dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/dialogForms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_forms"
            android:background="@drawable/bg_input"
            android:textColor="#212121"
            android:textColorHint="#9E9E9E"
            android:padding="12dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/dialogTranslation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_translation"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:gravity="top"
            android:background="@drawable/bg_input"
            android:textColor="#212121"
            android:textColorHint="#9E9E9E"
            android:padding="12dp" />

    </LinearLayout>

</ScrollView>
